chore: sections added

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
             </div>
         </header>
     </section>
-    <section><div class="mid-flex">
+    <section>
+        <div class="mid-flex">
         <div class="hero-txt">
             <h1>Save a whooping <br> $12,375*</h1>
             <h2>when you buy or sell your home with Felix.</h2>
@@ -128,6 +129,263 @@
         </div>
         <div class="sec-3-left-img">
             <img src="https://www.felixhomes.com/images/couple-moving.jpg" alt="">
+        </div>
+    </div>
+</section>
+<section class="section5">
+    <div class="sec-bg-container-full">
+        <div class="background-color-full">
+        <div class="pattern-divs-f">
+            <div class="pattern-div1-f"></div>
+            <div class="pattern-div2-f"></div>
+            <div class="pattern-div3-f"></div>
+            <div class="pattern-div4-f"></div>
+        </div>
+        <div class="sec-5-content">
+        <h3>FELIX REVIEWS</h3>
+        <h2>Our clients are our biggest fans</h2>   
+        
+        <div class="cards">
+            <div class="rev-card">
+                <div class="card-detail">
+                <img src="https://felix-homes-assets.s3.us-east-2.amazonaws.com/2302469_1_2_66fac919ce.jpg" alt="" class="home-img">
+                <div class="pad-card">
+                <div class="card-flex1">
+                    <img src="https://www.felixhomes.com/images/Google.svg" alt="" class="g-logo">
+                    <span class="save-span">Saved $14,000</span>
+                </div>
+                <img src="images/logo/16231558095-star-rating.svg" alt="" class="star-logo">
+                <p class="full-text">Tyler and Felix Homes were <br>
+                    wonderful. I sold the house almost <br> 
+                    immediately for more money than I... <br>
+                </p>
+                <p class="see-m">See more</p>
+                <p class="p-name">Nikolai P., Nashville, TN</p>
+                <p class="p-name2">2 Days On Market</p>
+                </div>
+                </div>
+            </div>
+            <div class="rev-card">
+                <div class="card-detail">
+                <img src="https://felix-homes-assets.s3.us-east-2.amazonaws.com/medium_2291515_0_2_60e1bb2c74.jpg" alt="" class="home-img">
+                <div class="pad-card">
+                <div class="card-flex1">
+                    <img src="https://www.felixhomes.com/images/Google.svg" alt="" class="g-logo">
+                    <span class="save-span">Saved $9,125</span>
+                </div>
+                <img src="images/logo/16231558095-star-rating.svg" alt="" class="star-logo">
+                <p class="full-text">We listed our house in Antioch with <br> felix as I was very much against <br> paying a commission that would give... <br>
+                </p>
+                <p class="see-m">See more</p>
+                <p class="p-name">Aldo & Beth C., Antioch, TN</p>
+                <p class="p-name2">15 Days On Market</p>
+                </div>
+                </div>
+            </div>
+            <div class="rev-card">
+                <div class="card-detail">
+                <img src="https://felix-homes-assets.s3.us-east-2.amazonaws.com/medium_2175130_0_1_3d1c5e4b0a.jpg" alt="" class="home-img">
+                <div class="pad-card">
+                <div class="card-flex1">
+                    <img src="https://www.felixhomes.com/images/Google.svg" alt="" class="g-logo">
+                    <span class="save-span">Saved $8,513</span>
+                </div>
+                <img src="images/logo/16231558095-star-rating.svg" alt="" class="star-logo">
+                <p class="full-text">As a buyer, I have never had a <br> smoother experience navigating the <br> complex details of purchasing a... <br>
+                </p>
+                <p class="see-m">See more</p>
+                <p class="p-name">Archie & Lilly B., Nolensville, TN</p>
+                <p class="p-name2">5 Days On Market</p>
+                </div>
+                </div>
+            </div>
+        </div> 
+        </div>
+        <div class="rev-btn-flex">
+        <button type="button" class="rev-button">See 100+ Reviews</button>
+        </div>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="sec-5-container">
+        <div class="sec-3-left-img">
+            <img src="https://www.felixhomes.com/images/the-team-with-gingo.png" alt="">
+        </div>
+        <div class="sec-3-right-text">
+            <h3>MEET THE TEAM</h3>
+            <H2>The people and pup <BR> working hard to save you <br>$$$.</H2>
+            <div class="check-flex">
+                <div class="check-img">
+                    <img src="images/logo/icons8-check-24.png" alt="">
+                    <p>Always local</p>
+                </div>
+                <div class="check-img">
+                    <img src="images/logo/icons8-check-24.png" alt="">
+                    <p>Always experienced</p>
+                </div>
+            </div>
+            <div class="check-flex2">
+                <div class="check-img">
+                    <img src="images/logo/icons8-check-24.png" alt="">
+                    <p>Always available</p>
+                </div>
+                <div class="check-img">
+                    <img src="images/logo/icons8-check-24.png" alt="">
+                    <p>Never pushy</p>
+                </div>
+            </div>
+
+            <div class="sec-3-btns">
+                <button type="button" class="sec5-btn1">Let's chat</button>
+            </div>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="sec-6-container">
+        <div class="sec-6-text">
+            <h3>EXPLORE NASHVILLE NEIGHBORHOODS</h3>
+            <H2>Let's find your home sweet home.</H2>
+        </div>
+        <div class="home-card-temp">
+            <div class="home-card">
+                <div>
+                <img src="https://www.felixhomes.com/images/find-home-1-Nashville.jpg" alt="" class="home2-img">
+                </div>
+                <div class="home-card-desc">
+                    <p>Nashville</p>
+                    <img src="images/logo/icons8-arrow-right-32.png" alt="">
+                </div>
+            </div>
+            <div class="home-card">
+                <img src="https://www.felixhomes.com/images/find-home-2-Murfreesboro.jpg" alt="" class="home2a-img">
+                <div class="home-card-desc">
+                    <p>Muffressboro</p>
+                    <img src="images/logo/icons8-arrow-right-32.png" alt="">
+                </div>
+            </div>
+            <div class="home-card">
+                <img src="https://www.felixhomes.com/images/find-home-3-Franklin.jpg" alt="" class="home2-img">
+                <div class="home-card-desc">
+                    <p>Franklin</p>
+                    <img src="images/logo/icons8-arrow-right-32.png" alt="">
+                </div>
+            </div>
+            <div class="home-card">
+                <img src="https://www.felixhomes.com/images/find-home-4-Lebanon.jpg" alt="" class="home2-img">
+                <div class="home-card-desc">
+                    <p>Lebanon</p>
+                    <img src="images/logo/icons8-arrow-right-32.png" alt="">
+                </div>
+            </div>  
+        </div>
+        <div class="home-card-temp">
+            <div class="home-card">
+                <img src="https://www.felixhomes.com/images/find-home-5-Spring-Hill.jpg" alt="" class="home2-img">
+                <div class="home-card-desc">
+                    <p>Spring Hill</p>
+                    <img src="images/logo/icons8-arrow-right-32.png" alt="">
+                </div>
+            </div>
+            <div class="home-card">
+                <img src="https://www.felixhomes.com/images/find-home-6-Mount-Juliet.jpg" alt="" class="home2-img">
+                <div class="home-card-desc">
+                    <p>Mount Julliet</p>
+                    <img src="images/logo/icons8-arrow-right-32.png" alt="">
+                </div>
+            </div>
+            <div class="home-card">
+                <img src="https://www.felixhomes.com/images/find-home-7-Hendersonville.jpg" alt="" class="home2-img">
+                <div class="home-card-desc">
+                    <p>Hendersonville</p>
+                    <img src="images/logo/icons8-arrow-right-32.png" alt="">
+                </div>
+            </div>
+            <div class="home-card">
+                <img src="https://www.felixhomes.com/images/find-home-8-Gallatin.jpg" alt="" class="home2-img">
+                <div class="home-card-desc">
+                    <p>Gallatin</p>
+                    <img src="images/logo/icons8-arrow-right-32.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="sec-5-btn">
+        <button type="button" class="sec5button">Search for Homes</button>
+        </div>
+        
+    </div>
+</section>
+<section>
+    <div class="sec-7-container">
+        <div class="sec-3-right-text">
+            <h3>THE FELIX GUARANTEE</h3>
+            <H2>We like to make <br> bold promises.</H2>
+            <p>So much so, that if you’re not ​100% satisfied​ when buying <br> or selling your home, we’ll refund our entire commission <br> at closing—guaranteed..</p>
+            <div>
+            <div class="sec-3-btns">
+                <button type="button" class="sec3-btn1">List my Home</button>
+            </div>
+            <p class="com-p">* Based on a 3% buyer’s agent commission.</p>
+            </div>
+
+        </div>
+        <div class="sec-6-left-img">
+            <img src="https://www.felixhomes.com/images/family-cooking.jpg" alt="">
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="sec-8-text">
+        <h3>LATEST REAL ESTATE TRENDS</h3>
+        <h2>Your local guide to <br>
+            buying or selling a home.</h2>
+    </div>
+    <div class="sec-8-btns">
+        <div class="sec8-btn">
+            <img src="images/logo/icons8-music-note-32.png" alt="">
+            <h3>Tennessee Living</h3>
+        </div>
+        <div class="sec8-btn">
+            <img src="images/logo/icons8-home-50.png" alt="">
+            <h3>Tips for buying a Home</h3>
+        </div>
+        <div class="sec8-btn">
+            <img src="images/logo/icons8-price-tag-50.png" alt="">
+            <h3>Tips for selling a Home</h3>
+        </div>
+        <div class="sec8-btn">
+            <img src="images/logo/icons8-dollar-50.png" alt="">
+            <h3>Financial Savvy</h3>
+        </div>
+    </div>
+    <div class="sec-8-btns">
+        <div class="sec8-btn">
+            <img src="images/logo/icons8-degree-32.png" alt="">
+            <h3>The Real Estate University</h3>
+        </div>
+        <div class="sec8-btn">
+            <img src="images/logo/icons8-news-24.png" alt="">
+            <h3>Market News</h3>
+        </div>
+        <div class="sec8-btn">
+            <img src="images/logo/icons8-star-50.png" alt="">
+            <h3>News Construction</h3>
+        </div>
+    </div>
+    <div class="sec-9-articles">
+        <div class="article-link">
+            <div>
+            <img src="https://felix-homes-assets.s3.us-east-2.amazonaws.com/small_nashville_01c46bd328.jpg" alt="" class="article-img">
+            </div>
+            <div>
+                <h4 class="art-heading">Moving to Nashville in 2025? Read <br> BEFORE Moving to Music City</h4>
+                <p class="art-exp">Nashville has quickly become one of the <br> most appealing cities in the country for <br> young professionals, families, and <br> retirees. We put together a guide to</p>
+            </div>
+            <div>
+            <img src="images/logo/icons8-arrow-right-50.png" alt="" class="arr-round">
+            </div>
         </div>
     </div>
 </section>
