chore: responsive-design-added

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 </section>
 <section>
     <div class="sec-5-container">
-        <div class="sec-3-left-img">
+        <div class="sec-5-left-img">
             <img src="https://www.felixhomes.com/images/the-team-with-gingo.png" alt="">
         </div>
         <div class="sec-3-right-text">
@@ -351,8 +351,8 @@
     <div class="sec-7-container">
         <div class="sec-3-right-text">
             <h3>THE FELIX GUARANTEE</h3>
-            <H2>We like to make <br> bold promises.</H2>
-            <p>So much so, that if you’re not ​100% satisfied​ when buying <br> or selling your home, we’ll refund our entire commission <br> at closing—guaranteed..</p>
+            <H2>We like to make bold promises.</H2>
+            <p>So much so, that if you’re not ​100% satisfied​ when buying  or selling your home, we’ll refund our entire commission at closing—guaranteed..</p>
             <div>
             <div class="sec-3-btns">
                 <button type="button" class="sec3-btn1">List my Home</button>
@@ -494,8 +494,8 @@
 <section class="section10">
     <div class="sec10-container">
         <div class="sec10-content">
-        <h3>Talk to Felix and save some serious <br> money, seriously!</h3>
-        <p>Whether you’re looking to have a 5 minute chat about the market or need some tips <br> on buying or selling a home, our friendly agents are here to help.</p>
+        <h3>Talk to Felix and save some serious  money, seriously!</h3>
+        <p>Whether you’re looking to have a 5 minute chat about the market or need some tips on buying or selling a home, our friendly agents are here to help.</p>
         <div class="chat-btn">
         <button type="button" class="sec10-btn">Let's Chat</button>
         </div>
